# jira_sync

./: README.md  jira-sync.py  pyproject.toml
docs/: user-manual.en.md  user-manual.md
jira_sync/: __main__.py  client.py  config.py  sync.py  syncer.py
jira_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
