[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-sync"
version = "0.1.0"
description = "Cross-instance Jira comment sync tool"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
jira-sync = "jira_sync.sync:main"

[tool.setuptools.packages.find]
where = ["."]
